BUGFIX: GD-22403 - Update BuildRequires.

--- a/nova.conf
+++ b/nova.conf
@@ -1,4 +1,6 @@
 [DEFAULT]
+verbose = yes
+api_paste_config = ~sysconfdir~/nova/api-paste.ini
 logdir = ~logdir~/nova
 state_path = /var/lib/nova
 lock_path = /var/lib/nova/tmp
@@ -16,4 +18,4 @@ sql_connection = mysql://nova:nova@localhost/nova
 connection_type = libvirt
 firewall_driver = nova.virt.libvirt.firewall.IptablesFirewallDriver
 rpc_backend = nova.rpc.impl_qpid
-root_helper = sudo nova-rootwrap
+root_helper = sudo ~bindir~/nova-rootwrap
